src/test/testData/parser/bad/FlowIfThen.basic
If
Then
    2->A
    If A=2,
    Then
        3->A
    End